--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
-<head><title>Personal Cloud</title></head>
+<head>
+  <title>Personal Cloud</title>
+  <style>
+    body {
+      font-family: -apple-system, sans-serif;
+    }
+  </style>
+</head>
 <body>
   <h1>Personal Cloud</h1>
+  <h2>Coming soon</h2>
 </body>
 </html>
 
