--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   </style>
 </head>
 <body>
-  <h1>Personal Cloud</h1>
-  <h2>Coming soon</h2>
+  <h1>The Personal Cloud is Coming</h1>
+
+  <p>Historically computing infrastructure began as centralized systems - mainframes - in order to make best of use of hardware and cost constraints.</p>
+
+  <p>Over time these centralized systems gave way to distributed ownership - personal computing - when these initial cost constraints were overcome. This has led to an explosion in new applications and services.</p>
+
+  <p>Internet services and cloud computing has reached such an influx point. The constraints that once required centralized systems to operate have been overcome. We can now build applications and services which scale automatically to any need, at a price point that allows <i>personal ownership</i>.</p>
+
+  <p>Welcome to the era of the Personal Cloud.</p>
 </body>
 </html>
 
