--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </style>
 </head>
 <body>
-  <h1>Personal Cloud is Coming Soon</h1>
+  <h1>Personal Cloud</h1>
+  <h3>Reclaiming Personal Computing in the Cloud</h3>
 
   <p>Historically computing infrastructure began as centralized systems - mainframes - in order to make best of use of hardware and cost constraints.</p>
 
