--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
   <title>Personal Cloud</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: -apple-system, sans-serif;
       max-width: 640px;
+      margin: 0 auto;
+      padding: 4em;
     }
   </style>
 </head>
