--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
   <h1>Personal Cloud</h1>
   <h3>Reclaiming Personal Computing in the Cloud</h3>
 
-  <p>Historically computing infrastructure began as centralized systems - mainframes - in order to make best of use of hardware and cost constraints.</p>
+  <p>Early computing infrastructure began as centralized systems - mainframes - in order to make best of use of hardware and cost constraints.</p>
 
-  <p>Over time these centralized systems gave way to distributed ownership - personal computing - when these initial cost constraints were overcome. This has led to an explosion in new applications and services.</p>
+  <p>Over time these centralized systems gave way to distributed ownership - personal computers - when these initial constraints were overcome. This has led to an explosion in new applications.</p>
 
-  <p>Internet services and cloud computing has reached such an inflection point.</p>
+  <p>Internet services and cloud computing has reached such an inflection point. The constraints that once required centralized systems to operate at Internet-scale have been overcome.</p>
 
-  <p>The constraints that once required centralized systems to operate at Internet-scale have been overcome. We can now build applications and services which scale automatically to any need, at a price point that allows for <i>personal ownership</i>.</p>
-
-  <p>Welcome to the era of the Personal Cloud.</p>
+  <p><b>Welcome to the era of the Personal Cloud.</b></p>
 </body>
 </html>
 
