--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,12 @@
   ></script>
 </head>
 <body>
-  <zero-md src="https://raw.githubusercontent.com/personal-cloud/pc-web/main/index.md" />
+  <zero-md></zero-md>
+  <script>
+    const page = location.search ? location.search.slice(1) : 'index.md';
+    const srcUrl = "https://raw.githubusercontent.com/personal-cloud/pc-web/main/" + page;
+    const zeroMd = document.querySelector("zero-md");
+    zeroMd.setAttribute("src", srcUrl);
+  </script>
 </body>
 </html>
