--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       padding: 4em;
     }
   </style>
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
+  ></script>
 </head>
 <body>
-  <h1>Personal Cloud</h1>
-  <h3>Reclaiming Personal Computing in the Cloud</h3>
-
-  <p>Early computing infrastructure began as centralized systems - mainframes - in order to make best of use of hardware and cost constraints.</p>
-
-  <p>Over time these centralized systems gave way to distributed ownership - personal computers - when these initial constraints were overcome. This has led to an explosion in new applications.</p>
-
-  <p>Internet services and cloud computing has reached such an inflection point. The constraints that once required centralized systems to operate at Internet-scale have been overcome.</p>
-
-  <p><b>Welcome to the era of the Personal Cloud.</b></p>
+  <zero-md></zero-md>
+  <script>
+    const page = location.search ? location.search.slice(1) : 'index.md';
+    const srcUrl = "https://raw.githubusercontent.com/personal-cloud/pc-web/main/" + page;
+    const zeroMd = document.querySelector("zero-md");
+    zeroMd.setAttribute("src", srcUrl);
+  </script>
 </body>
 </html>
-
